--- a/lib/css/radiator.css
+++ b/lib/css/radiator.css
@@ -31,7 +31,7 @@ div.anime{-webkit-animation-name:pulse;}
 body {
 	font-family:Arial, Helvetica, sans-serif;
 }
-body.dark {
+body {
 	background-color:#000;
 	color:#fff;
 	margin:0;
@@ -89,18 +89,34 @@ div.unit {
 	border-radius:10px;
 	padding:8px;
 	min-height:30px;
-
+}
+body.glossy div.unit {
+  box-shadow:
+    0 2px 6px rgba(0,0,0,0.5),
+    inset 0 1px rgba(255,255,255,0.3),
+    inset 4px 4px 8px rgba(255,255,255,0.5),
+    inset 10px 10px 5px rgba(255,255,255,0.2),
+    inset 10px 10px 20px rgba(255,255,255,0.2),
+    inset -10px -10px 20px rgba(0,0,0,0.5),
+    inset -4px -4px 8px rgba(0,0,0,0.5);
+  padding: 15px;
+}
+body.flat div.unit {
+    box-shadow: inset 0 0 5px #000;
 }
 div.top {position:relative}
 div.top img {
 	position:absolute;
-	top:-14px;
-	right:-10px;
 }
-body.dark div.unit {
-	box-shadow: inset 0 0 5px #000;
+body.glossy div.top img {
+    top:-6px;
+    right:-6px;
 }
-body.dark div.td {
+body.flat div.top img {
+    top:-14px;
+    right:-10px;
+}
+div.td {
 	border: 0px solid black;
 }
 div.row {
