Tweak popup display to show/animate active jobs

--- a/lib/css/popup.css
+++ b/lib/css/popup.css
@@ -101,7 +101,9 @@ img#refreshIcon {
 
 #refresh {
     cursor: pointer;
-    float: right;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 #refresh span {
