--- a/lib/css/radiator.css
+++ b/lib/css/radiator.css
@@ -26,7 +26,10 @@
 	   opacity: 1.0;
 	 }
 }
-div.anime{-webkit-animation-name:pulse;}
+div.anime{
+    -webkit-animation-name:pulse;
+    background-image: none!important;
+}
 
 body {
 	font-family:Arial, Helvetica, sans-serif;
@@ -101,6 +104,19 @@ body.glossy div.unit {
     inset -4px -4px 8px rgba(0,0,0,0.5);
   padding: 15px;
 }
+body.glossy div.unit {
+    background-image: radial-gradient(farthest-corner at 100% 100%, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 50%);
+}
+/*
+body.glossy div.unit:before {
+    content:"";
+    position:absolute;
+    border-radius:5px 0 5px 0 ;
+    margin:0px;
+    width : 100%;
+    height: 60%;
+    background-image: radial-gradient(farthest-corner at 0% 0%, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 50%);
+}*/
 body.flat div.unit {
     box-shadow: inset 0 0 5px #000;
 }
