Simplify radiator background colour/image settings and make status icon respect the standard blue option

--- a/lib/css/popup.css
+++ b/lib/css/popup.css
@@ -52,6 +52,10 @@ li.status-red {
 li.status-yellow {
     background-image: url(../i/yellow19.png);
 }
+li a {
+    display: inline-block;
+    padding-top: 1px;
+}
 h1 a, h1 a:focus {
     outline: none;
     text-decoration: none;
