Make yellow segment in pie display (previously showed as grey). Hide message while refreshing in popup. Add extension version number to browser action title.

--- a/lib/css/popup.css
+++ b/lib/css/popup.css
@@ -81,6 +81,9 @@ body.update-pending p.message {
     background-image: url(../i/red19.png);
     min-height: 20px;
 }
+body.update-pending p.message, body.update-pending p.message a {
+    color: transparent;
+}
 @-webkit-keyframes waiting {
     from {
         background-position-x: 5%;
