--- a/lib/css/popup.css
+++ b/lib/css/popup.css
@@ -114,20 +114,45 @@ img#refreshIcon {
 }
 
 #refresh {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    box-shadow: 0 0 0 0 rgba(0,0,0,0.0);;
     cursor: pointer;
+    min-height: 18px;
+    min-width: 18px;
+    padding: 2px;
     position: absolute;
     right: 0;
+    text-align: right;
     top: 0;
+    z-index: 2;
+    -webkit-transition: all 300ms linear;
 }
-
+#refresh img {
+    right:2px;
+    position: absolute;
+    top: 2px;
+}
 #refresh span {
     color: #aaa;
+    display: inline-block;
+    left:7px;
     opacity: 0;
-
-    -webkit-transition: opacity 300ms linear;
+    overflow: hidden;
+    position: absolute;
+    top:3px;
+    text-align: left;
+    width: 0;
+    -webkit-transition: all 300ms linear;
+}
+#refresh:hover {
+    box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
+    width:70px;
 }
 #refresh:hover span {
     opacity: 1;
+    width: 60px;
 }
 @-webkit-keyframes pulse {
 	 0% {
