--- a/lib/css/popup.css
+++ b/lib/css/popup.css
@@ -115,7 +115,7 @@ img#refreshIcon {
 
 #refresh {
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
     border-radius: 12px;
     box-shadow: 0 0 0 0 rgba(0,0,0,0.0);;
     cursor: pointer;
@@ -147,6 +147,7 @@ img#refreshIcon {
     -webkit-transition: all 300ms linear;
 }
 #refresh:hover {
+    border: 1px solid #ccc;
     box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
     width:70px;
 }
