Remove typo, increment release number, fix the default column value for new views and only show the reflection on the hero panel if there  is only one view (Chrome bug)

--- a/lib/css/radiator.css
+++ b/lib/css/radiator.css
@@ -365,8 +365,9 @@ body.showInfo div.radiator {
 	padding:40px 20px 20px 20px ;
 	position:absolute;
 	width:200px;
-
-	-webkit-box-reflect:below 2px -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0)), to(rgba(0,0,0,0.3)));
+}
+body.radiator-count-false #divInfo{
+    -webkit-box-reflect:below 2px -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0)), to(rgba(0,0,0,0.3)));
 }
 h1 {font-size:120%;font-weight:500;margin-top:0;}
 #divDateDisplay, #divDateDisplay_under {
