--- a/lib/css/popup.css
+++ b/lib/css/popup.css
@@ -102,8 +102,12 @@ div#wrapper {
     position: relative;
 }
 div#footer {
+    background-color: #fff;
+    border-top: 1px dashed #888;
     bottom:0;
-    position: absolute;
+    padding: 3px ;
+    position: fixed;
+    text-align: center ;
     width:100%;
 }
 img#refreshIcon {
